--- a/static/index.html
+++ b/static/index.html
@@ -10,6 +10,10 @@
       line-height: 1.8;
       color: #f5f6f7;
 	}
+  img {
+    max-width: 100%;
+    max-height: 100%;
+  }
 	.bg-1 { 
       background-color: #1abc9c; /* Green */
       color: #ffffff;
@@ -31,10 +35,10 @@
 	</script>
   </head>
   <body>
-	<div class="bg-1 text-center">
-    CAM1 <br />
+	<div class="bg-1">
+    CAM1 {{.LastDate}} <br />
 	</div>
-	<div class="bg-3 text-center">
+	<div class="bg-3">
 	<img id="CAM" src="/cam/CAM-1.jpg"/>
 	</div>
   </body>
