--- a/static/index.html
+++ b/static/index.html
@@ -26,17 +26,37 @@
 	<script>
     window.onload = function() {
     var image = document.getElementById("CAM");
+    /*
     function updateImage() {
         image.src = image.src.split("?")[0] + "?" + new Date().getTime();
         //console.log("update" + image.src)
+        loadStatus();
     }
-    setInterval(updateImage, 15000);
+    */
+    loadCAM();
+    setInterval(loadCAM, 15000);
+    }
+    
+    function loadCAM() {
+        var xhttp = new XMLHttpRequest();
+        xhttp.onreadystatechange = function() {
+        if (this.readyState == 4 && this.status == 200) {
+          var image = document.getElementById("CAM");
+          var resp = JSON.parse(this.responseText);   
+          document.getElementById("status").innerHTML = "CAM-"+resp.id+"   "+resp.updated;
+          image.src = resp.path.split("?")[0] + "?" + new Date().getTime();
+          }
+        };
+        xhttp.open("GET", "api", true);
+        xhttp.send();
     }
 	</script>
   </head>
   <body>
-	<div class="bg-1">
+<!--	<div class="bg-1">
     CAM1 {{.LastDate}} <br />
+	</div>-->
+  <div class="bg-1" id="status">
 	</div>
 	<div class="bg-3">
 	<img id="CAM" src="/cam/CAM-1.jpg"/>
