--- a/static/index.html
+++ b/static/index.html
@@ -40,14 +40,20 @@
     function loadCAM() {
         var xhttp = new XMLHttpRequest();
         xhttp.onreadystatechange = function() {
-        if (this.readyState == 4 && this.status == 200) {
-          var image = document.getElementById("CAM");
-          var resp = JSON.parse(this.responseText)[0];   
-          //document.getElementById("status").innerHTML = "CAM-"+resp.id+"   "+resp.updated;
-          var ts = new Date(resp.timestamp*1000).toLocaleString()
-          document.getElementById("status").innerHTML = "CAM-"+resp.id+"   "+ts;
-          // todo - check TS
-          image.src = resp.path.split("?")[0] + "?" + new Date().getTime();
+          if (this.readyState == 4 && this.status == 200) {
+            var cam_arr = JSON.parse(this.responseText)
+            for (let i = 0; i < cam_arr.length; i++) {
+              var resp = cam_arr[i];
+              var id = resp.id
+              var cam_div = document.getElementById("cam-"+id)
+              var image = document.getElementById("img-"+id); 
+              if (cam_div.style.display == 'none')
+                cam_div.style.display = 'block';        
+              var ts = new Date(resp.timestamp*1000).toLocaleString()
+              document.getElementById("status-"+id).innerHTML = "CAM-"+id+"   "+ts;
+              // todo - check TS
+              image.src = resp.path.split("?")[0] + "?" + new Date().getTime();
+            }
           }
         };
         xhttp.open("GET", "api", true);
@@ -59,10 +65,19 @@
 <!--	<div class="bg-1">
     CAM1 {{.LastDate}} <br />
 	</div>-->
-  <div class="bg-1" id="status">
+  <div id="cam-1" style="display: none;">
+  <div class="bg-1" id="status-1">
 	</div>
 	<div class="bg-3">
-	<img id="CAM" src="/cam/CAM-1.jpg"/>
+	<img id="img-1" src="/cam/CAM-1.jpg"/>
 	</div>
+  <div>
+  <div id="cam-2" style="display: none;">
+  <div class="bg-1" id="status-2">
+	</div>
+	<div class="bg-3">
+	<img id="img-2" src="/cam/CAM-2.jpg"/>
+	</div>
+  <div>
   </body>
 </html>
